feat(dev): Enhance AI Assistant with custom provider support and model fetching

--- a/src/renderer/i18n/locales/en-US.json
+++ b/src/renderer/i18n/locales/en-US.json
@@ -220,8 +220,18 @@
     "apiKey": "API Key",
     "apiKeyTooltip": "Get API Key from OpenAI website",
     "apiKeyRequired": "API Key is required to enable AI features",
+    "baseUrl": "API Base URL",
+    "baseUrlTooltip": "Custom API request base address (e.g., https://api.openai.com/v1)",
+    "baseUrlRequired": "Base URL is required when using custom provider",
     "aiModel": "AI Model",
     "aiModelTooltip": "Select AI model to use",
+    "selectOrInputModel": "Select or input model",
+    "fetchModels": "Fetch Models",
+    "modelsFetched": "Models fetched successfully",
+    "noModelsFound": "No models found",
+    "fetchModelsError": "Failed to fetch models, please check your config",
+    "testConnection": "Test Connection",
+    "testConnectionError": "Test connection failed, please ensure API Key and Base URL are correct",    "modelWarning": "Tip: You are using a custom provider. Please ensure the model name is selected from the dropdown or manually entered as a correct ID (current default 'gpt-5' may cause 404 errors).",    
     "aiConfigSaved": "Configuration Saved",
     "aiConfigSavedDesc": "AI assistant configuration updated. You can now use AI enhancement features.",
     "helpLinks": "Help Links",
