--- a/src/renderer/i18n/locales/zh-CN.json
+++ b/src/renderer/i18n/locales/zh-CN.json
@@ -220,8 +220,19 @@
     "apiKey": "API Key",
     "apiKeyTooltip": "从 OpenAI 官网获取 API Key",
     "apiKeyRequired": "启用 AI 功能需要配置 API Key",
+    "baseUrl": "API 基础 URL",
+    "baseUrlTooltip": "自定义 API 请求的基础地址 (例如: https://api.openai.com/v1)",
+    "baseUrlRequired": "使用自定义提供商时需要配置的基础 URL",
     "aiModel": "AI 模型",
     "aiModelTooltip": "选择使用的 AI 模型",
+    "selectOrInputModel": "选择或输入模型",
+    "fetchModels": "获取模型列表",
+    "modelsFetched": "成功获取模型列表",
+    "noModelsFound": "未发现可用模型",
+    "fetchModelsError": "获取模型列表失败，请检查配置",
+    "testConnection": "测试连接",
+    "testConnectionError": "测试连接失败，请确认 API Key 和 Base URL 已正确填写",
+    "modelWarning": "提示：您当前使用的是自定义提供商，请确保模型名称已从下拉列表选择或手动输入为正确的 ID（当前默认 'gpt-5' 可能导致 API 报 404 错误）。",
     "aiConfigSaved": "配置已保存",
     "aiConfigSavedDesc": "AI 助手配置已更新，现在可以使用 AI 增强功能了。",
     "helpLinks": "帮助链接",
